--- a/tls-first-app/src/index.html
+++ b/tls-first-app/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="row">
-        <tls-app>Loadding...</tls-app>
+        <tls-app>Loading...</tls-app>
     </div>
   </div>
 
